--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "description": "",
   "dependencies": {
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.13"
   }
 }
